--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -10,21 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        font-size: 0.9rem;
-        font-weight: 300;
-        text-transform: lowercase;
-      }
 
-      a {
-        text-decoration: underline;
-      }
+<link rel="stylesheet" href="css/styles.css">
 
-      .no-underline {
-        text-decoration: none;
-      }
-    </style>
+
+
+</style>
     <script>
       const backgrounds = [
         '../images/backgrounds/bg1.jpg',
@@ -128,8 +119,12 @@
       <p class="text-base">2023 campaign big awards</p>
     </section>
 
-    <footer class="text-sm text-center mt-24">
-      <body>©richard bailey 2025 <br> lovely designed, coded and deployed by me</body>
-    </footer>
+   <script>
+  fetch('footer.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('footer-placeholder').innerHTML = data;
+    });
+</script>
   </body>
 </html>
