4th June - AM Push

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
-<!-- footer.html -->
 <footer>
-  <div class="footer-content"> lovingly designed, coded and deployed by me <br> &copy;2025
-    <!-- <a href="contact/index.html"></a> -->
+  <!-- <div class="py-8 border-t border-gray-200 text-center text-sm text-gray-500"> -->
+   
+  <div>Lovingly designed, coded and deployed by me <br> &copy; 2025 Richard Bailey
   </div>
 </footer>
 
