--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
       <h1 class="text-2xl font-medium mb-2">richard bailey</h1>
       <nav class="space-x-3 text-sm">
         <a href="pages/about/index.html">about</a>
-        <a href="projects.html">projects</a>
+        <a href="pages/project/index.html">projects</a>
         <a href="contact.html">contact</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
@@ -57,6 +57,7 @@
   
 </div>
 </section>
+
 <div id="footer-placeholder"></div>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
@@ -71,4 +72,4 @@
 <script src="background.js"></script>
 
 </body>
-</html> -->
+</html>
