12-noon- Pages created

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
           <a href="index.html" class="hover:underline">richard bailey</a>
         </h1>
         <nav class="space-x-3 text-sm">
-          <a href="pages/about/index.html">about</a>
+          <a href="about.html">about</a>
           <a href="projects.html">projects</a>
           <a href="contact.html">contact</a>
           <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
@@ -27,7 +27,7 @@
     </header>
 
     <section id="projects" class="mb-12">
-      <h2 class="text-xl font-medium mb-4"><a href="projects/">projects</a></h2>
+      <!-- <h2 class="text-xl font-medium mb-4"><a href="projects/">projects</a></h2> -->
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
         <!-- Repeat up to 16 projects below -->
         <a href="projects/gwr-five-get-there-first.html" class="block group relative overflow-hidden">
