--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="index.html" class="hover:underline">richard bailey</a>
         </h1>
       <nav class="space-x-3 text-sm">
-        <a href="pages/about/index.html">about</a>
+        <a href="about.html">about</a>
         <a href="projects.html">projects</a>
         <a href="contact.html">contact</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
