End of noon commit

--- a/pages/about/projects/index.html
+++ b/pages/about/projects/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home — richard bailey</title>
+    <title>richard bailey</title>
     <link rel="icon" href="images/favicon/favicon-hero.png" type="image/x-icon">
     <link rel="icon" type="image/svg+xml" href="images/favicon/favicon-hero-192x192.svg">
     <link rel="manifest" href="images/favicon/site.webmanifest">
@@ -20,12 +20,10 @@
   <body class="bg-white text-black max-w-6xl mx-auto px-4 py-8">
 <header class="mb-8 pt-12 flex items-center justify-between">
       <div>
-        <h1 class="text-2xl font-medium mb-2">
-        <a href="index.html" class="hover:underline">richard bailey</a>
-        </h1>
+      <h1 class="text-2xl font-medium mb-2">richard bailey</h1>
       <nav class="space-x-3 text-sm">
-        <a href="about.html">about</a>
-        <a href="projects.html">projects</a>
+        <a href="pages/about/index.html">about</a>
+        <a href="pages/project/index.html">projects</a>
         <a href="contact.html">contact</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
@@ -59,30 +57,6 @@
   
 </div>
 </section>
-
-    <section id="for fun" class="mb-12">
-  <h2 class="text-xl font-medium mb-4"><a href="for-fun/">for fun</a></h2>
-  
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-    <a href="projects/project1.html" class="block group relative overflow-hidden">
-  <img src="images/placeholders/placeholder-1-1080x1350.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-  <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">Project Title</div>
-</a>
-
-<a href="projects/project1.html" class="block group relative overflow-hidden">
-  <img src="images/placeholders/placeholder-1-1080x1350.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-  <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">Project Title</div>
-</a>
-
-<a href="projects/project1.html" class="block group relative overflow-hidden">
-  <img src="images/placeholders/placeholder-1-1080x1350.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-  <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">Project Title</div>
-</a>
-
-    <!-- Add more projects as needed -->
-  </div>
-</section>
-
 
 <div id="footer-placeholder"></div>
 <script>
