--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>richard bailey</title>
+    <title>projects — richard bailey</title>
     <link rel="icon" href="images/favicon/favicon-hero.png" type="image/x-icon">
     <link rel="icon" type="image/svg+xml" href="images/favicon/favicon-hero-192x192.svg">
     <link rel="manifest" href="images/favicon/site.webmanifest">
@@ -34,7 +34,7 @@
           <img src="assets/gwr/gwr-five-get-there-first-01.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">five get there first</div>
         </a>
-        <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
+        <a href="projects/project-template.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
