--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>about — richard bailey</title>
+  <title>contact — richard bailey</title>
   <link rel="icon" href="images/favicon/favicon-hero.png" type="image/x-icon">
   <link rel="icon" type="image/svg+xml" href="images/favicon/favicon-hero-192x192.svg">
   <link rel="manifest" href="images/favicon/site.webmanifest">
