Saviour Ben (not max)

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .client-logo {
-      filter: grayscale(1) brightness(0.85);
+      filter: grayscale(1) brightness(1);
       transition: filter 0.3s;
       width: 100%;
       height: 100%;
@@ -35,6 +35,7 @@
         <a href="about.html">about</a>
         <a href="projects.html">projects</a>
         <a href="contact.html">contact</a>
+        <a href="forfun.html">for fun</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
     </div>
@@ -82,9 +83,38 @@
         <img src="images/logos/calmlogo.svg" alt="Client 7" class="client-logo"/>
       </div>
       <div class="p-4 flex items-center justify-center h-20">
-        <img src="images/logos/columbia.svg" alt="Client 8" class="client-logo"/>
+        <img src="images/logos/quornlogo.svg" alt="Client 8" class="client-logo"/>
       </div>
-      <!-- Add or remove as needed -->
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/volkswagenlogo.svg" alt="Client 8" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/lloydslogo.svg" alt="Client 8" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/bankofscotlandlogo.svg" alt="Client 8" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/scottishwidowslogo.svg" alt="Client 8" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/temptationslogo.svg" alt="Client 1" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/easportslogo.svg" alt="Client 1" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/disneylogo.svg" alt="Client 3" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/diageologo.svg" alt="Client 4" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/lucozadelogo.svg" alt="Client 5" class="client-logo"/>
+      </div>
+      <div class="p-4 flex items-center justify-center h-20">
+        <img src="images/logos/iamslogo.svg" alt="Client 6" class="client-logo"/>
+      </div>
     </div>
   </section>
 
