--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         <a href="about.html">about</a>
         <a href="projects.html">projects</a>
         <a href="contact.html">contact</a>
+        <a href="forfun.html">for fun</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
     </div>
