--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
           <a href="about.html">about</a>
           <a href="projects.html">projects</a>
           <a href="contact.html">contact</a>
+          <a href="forfun.html">for fun</a>
           <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
         </nav>
       </div>
@@ -34,51 +35,62 @@
           <img src="assets/gwr/gwr-five-get-there-first-01.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">five get there first</div>
         </a>
-        <a href="projects/project-template.html" class="block group relative overflow-hidden">
-          <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
+
+        <a href="projects/calm-the-last-photo.html" class="block group relative overflow-hidden">
+          <img src="assets/calm/calm-the-last-photo-01.jpg" alt="calm-the-last-photo" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
+          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">the last photo</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
+        <a href="/projects/waitrose-cooks.html" class="block group relative overflow-hidden">
+          <img src="/assets/waitrose/waitrose-cooks-6.jpg" alt="placeholder image" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
+          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">cooks ingredients</div>
+        </a>
+
+        <a href="project-template.html" class="block group relative overflow-hidden">
+          <img src="images/placeholders/placeholder-1-1080x1350.jpg" alt="placeholder image" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
+          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">placeholder project</div>
+        </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
+
         <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
           <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
           <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
         </a>
-        <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
-          <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
-        </a>
-        <a href="projects/twix-second-screen-staredown.html" class="block group relative overflow-hidden">
-          <img src="assets/twix/twix-staredown-01.jpg" alt="Project 2 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
-          <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
-        </a>
-        
+      
         <!-- Add up to 16 project cards here, just like above -->
       </div>
     </section>
