--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="about.html">about</a>
         <a href="projects.html">projects</a>
         <a href="contact.html">contact</a>
+        <a href="forfun.html">for fun</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
       </div>
@@ -50,7 +51,7 @@
   <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">second screen staredown</div>
 </a>
 
- <a href="projects/" class="block group relative overflow-hidden">
+ <a href="projects/calm-the-last-photo.html" class="block group relative overflow-hidden">
   <img src="assets/calm/calm-the-last-photo-01.jpg" alt="Project 1 Thumbnail" class="w-full aspect-[16/9] object-cover group-hover:opacity-60 transition-opacity duration-200">
   <div class="absolute inset-0 flex items-center justify-center text-black text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200">the last photo</div>
 </a>
