--- a/header.html
+++ b/header.html
@@ -4,10 +4,10 @@
         <a href="/index.html" class="hover:underline">richard bailey</a>
         </h1>
       <nav class="space-x-3 text-sm">
-        <a href="/about.html">about</a>
-        <a href="/projects.html">projects</a>
-        <a href="/contact.html">contact</a>
-        <a href="/forfun.html">for fun</a>
+        <a href="about.html">about</a>
+        <a href="projects.html">projects</a>
+        <a href="contact.html">contact</a>
+        <a href="forfun.html">for fun</a>
         <a href="#" onclick="changeBackground()" class="hover:text-black-600">click it</a>
       </nav>
       </div>
